--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 <script>
   // Your web app's Firebase configuration
 const firebaseConfig = {
-    apiKey: "AIzaSyBdD-Gc2e9FgPBgSfSYGhx1jQQJpTGIzOE",
-    authDomain: "carro2-ea98f.firebaseapp.com",
-    databaseURL: "https://carro2-ea98f-default-rtdb.firebaseio.com",
-    projectId: "carro2-ea98f",
-    storageBucket: "carro2-ea98f.appspot.com",
-    messagingSenderId: "871990976772",
-    appId: "1:871990976772:web:237d064939245c41193051",
-    measurementId: "G-7315WECJT6"
-  };
+  apiKey: "AIzaSyBxWmdgu3v4vlHdcRKxHTJwa-10rl8Kl84",
+  authDomain: "copia-de-pou.firebaseapp.com",
+  databaseURL: "https://copia-de-pou-default-rtdb.firebaseio.com",
+  projectId: "copia-de-pou",
+  storageBucket: "copia-de-pou.appspot.com",
+  messagingSenderId: "184858630942",
+  appId: "1:184858630942:web:ef3cd0d859c6534e0d070f"
+};
+
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
